black template fix

--- a/black.html
+++ b/black.html
@@ -52,12 +52,12 @@
 <div id="start" class="wrapper">
 
     <div class="mainnav-wrapper">
-        <div class="logo-wrapper logo-wrapper-mobile block bgwhite transp header mobile">
+        <div class="logo-wrapper logo-wrapper-mobile block bgblack transp header mobile">
             <a class="mobilemenuicon" href="">= MENU</a>
-            <a href="#start"><img class="logo" src="images/kina-black.png"/></a>
+            <a href="#start"><img class="logo" src="images/kina-white.png"/></a>
         </div>
         <div class="mainnav">
-            <a href="#start"><img class="menulogo" src="images/kina-white.png"/></a>
+            <a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kina-white.png"/></a>
             <a href="#nav-fashion" class="">FASHION & BEAUTY</a>
             <a href="#nav-business" class="">BUSINESS</a>
             <a href="#nav-events" class="">HOCHZEIT</a>
