--- a/index.html
+++ b/index.html
@@ -40,31 +40,24 @@
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Oswald:600" rel="stylesheet">
 
-    <script type="text/javascript" src="js/kina.js"></script>
-    <link rel="stylesheet" href="css/kina.css">
+    <script type="text/javascript" src="js/kina-black.js"></script>
+    <link rel="stylesheet" href="css/kina-black.css">
 </head>
 
 
 <body class="body">
 
-<div id="start" class="wrapper">
-
     <p class="welcomerow desktop">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
 
-    <div class="logo-wrapper logo-wrapper-desktop block header desktop">
-        <img class="logo" src="images/kina-black.png"/>
-        <!--<h1 class="widetext">K I N A S T U D I O</h1>-->
-
-    </div>
-
+<div id="start" class="wrapper">
 
     <div class="mainnav-wrapper">
-        <div class="logo-wrapper logo-wrapper-mobile block bgwhite transp header mobile">
+        <div class="logo-wrapper logo-wrapper-mobile block bgblack transp header mobile">
             <a class="mobilemenuicon" href="">= MENU</a>
-            <a href="#start"><img class="logo" src="images/kina-black.png"/></a>
+            <a href="#start"><img class="logo" src="images/kina-white.png"/></a>
         </div>
         <div class="mainnav">
-            <!--<a href="#start"><img class="menulogo" src="images/kina-black.png"/></a>-->
+            <a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kina-white.png"/></a>
             <a href="#nav-fashion" class="">FASHION & BEAUTY</a>
             <a href="#nav-business" class="">BUSINESS</a>
             <a href="#nav-events" class="">HOCHZEIT</a>
@@ -134,32 +127,6 @@
 
     <!-- INSTAGRAM STUFF HERE -->
 
-    <!--
-        <div id="nav-beauty"></div>
-
-        <div class="headline">
-            <h2 class="widetext">BEAUTY</h2>
-        </div>
-
-        <div class="block">
-            <div class="instagram-kinastudio-beauty"></div>
-            <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_beauty/" target="_blank">Mehr auf Instagram ></a>
-        </div>
-        <script>
-            $('.instagram-kinastudio-beauty').instagramElement({
-                mode : 'tag',
-                tag : 'kinastudio_beauty',
-                userID : '2066076364',
-                accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
-                galleryMode: 'classic',
-                limit: 12,
-                video: true,
-                showVideoControls: false
-            });
-        </script>
-    -->
-
-
     <div id="nav-fashion"></div>
 
     <div class="headline">
@@ -169,7 +136,7 @@
 
     <div class="block">
         <div class="instagram-kinastudio-fashion"></div>
-        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_fashion/" target="_blank">Mehr
+        <a class="blackbutton" href="https://www.instagram.com/explore/tags/kinastudio_fashion/" target="_blank">Mehr
             auf Instagram ></a>
     </div>
     <script>
@@ -194,7 +161,7 @@
     </div>
     <div class="block">
         <div class="instagram-kinastudio-business"></div>
-        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_business/" target="_blank">Mehr
+        <a class="blackbutton" href="https://www.instagram.com/explore/tags/kinastudio_business/" target="_blank">Mehr
             auf Instagram ></a>
     </div>
     <script>
@@ -219,7 +186,7 @@
     </div>
     <div class="block">
         <div class="instagram-kinastudio-wedding"></div>
-        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_wedding/" target="_blank">Mehr
+        <a class="blackbutton" href="https://www.instagram.com/explore/tags/kinastudio_wedding/" target="_blank">Mehr
             auf Instagram ></a>
     </div>
     <script>
@@ -243,7 +210,7 @@
     </div>
     <div class="block">
         <div class="instagram-kinastudio-lifestyle"></div>
-        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_lifestyle/" target="_blank">Mehr
+        <a class="blackbutton" href="https://www.instagram.com/explore/tags/kinastudio_lifestyle/" target="_blank">Mehr
             auf Instagram ></a>
     </div>
     <script>
@@ -288,17 +255,6 @@
     </div>
 
 
-    <div class="block headline">
-        <h2 class="widetext">FOLLOW</h2>
-    </div>
-
-    <div class="block bgblack">
-        <a href="https://www.facebook.com/www.kina.studio" target="_blank"><img class="socialbutton"
-                                                                                src="images/facebook-white.png"/></a>
-        <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="socialbutton"
-                                                                              src="images/instagram-white.png"/></a>
-        <a href="https://500px.com/kinastudio" target="_blank"><img class="socialbutton" src="images/500px-white.png"/></a>
-    </div>
 
 
     <div id="contact"></div>
@@ -321,16 +277,26 @@
         </div>
     </div>
 
+    <div class="block bgblack">
+        <a href="https://www.facebook.com/www.kina.studio" target="_blank"><img class="socialbutton" src="images/facebook-white.png"/></a>
+        <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="socialbutton" src="images/instagram-white.png"/></a>
+        <a href="https://500px.com/kinastudio" target="_blank"><img class="socialbutton" src="images/500px-white.png"/></a>
+    </div>
+
+
+
+
     <div class="topline"></div>
 
     <div class="block">
-        <a class="link" href="imprint.html" target="_blank">Impressum // imprint</a>
+        <a class="link" href="privacy.html" target="_blank">DATENSCHUTZ</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="link" href="imprint.html" target="_blank">IMPRESSUM</a>
         <p style="text-align: center;">&copy; 2009-2017 KINA.studio. Stuttgart city.</p>
     </div>
 </div>
 
 
-<p class="cookiesrow">kina.studio verwendet Cookies. <br> <a href="privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="closeCookieWindow">OK</a></p>
+<p class="cookiesrow">kina.studio verwendet Cookies. <br> <a href="privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="closeCookieWindow">Einverstanden</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="link" href="imprint.html" target="_blank">Impressum</a></p>
 
 <div class=""><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
