--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 </div>
 
 
-<p class="cookiesrow">kina.studio verwendet Cookies. <br> <a href="privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="closeCookieWindow">Einverstanden</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="link" href="imprint.html" target="_blank">Impressum</a></p>
+<p class="cookiesrow">kina.studio verwendet Cookies.<br><a href="privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;<a class="closeCookieWindow informedAboutCookies">Einverstanden</a>&nbsp;&nbsp;&nbsp;<a href="imprint.html" target="_blank">Impressum</a></p>
 
 <div class=""><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
