--- a/index.html
+++ b/index.html
@@ -297,8 +297,7 @@
 
 
 <p class="cookiesrow">kina.studio verwendet Cookies.<br>
-<a href="privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a class="closeCookieWindow informedAboutCookies">Einverstanden</a></p>
+<a href="privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;<a class="closeCookieWindow informedAboutCookies">Einverstanden</a></p>
 
 <div class=""><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
