--- a/hochzeit/index.html
+++ b/hochzeit/index.html
@@ -51,18 +51,18 @@
     <p class="welcomerow desktop">Willkommen bei kina.studio - Professionelle Fotografie an dem schönsten Tag Ihres Lebens. </p>
 
     <div class="logo-wrapper logo-wrapper-desktop block header desktop">
-        <img class="logo" src="images/kina-black.png"/>
+        <img class="logo" src="../images/kina-black.png"/>
     </div>
 
     <div class="mainnav-wrapper">
         <div class="logo-wrapper logo-wrapper-mobile block bgwhite transp header mobile">
             <a class="mobilemenuicon" href="">= MENU</a>
-            <a href="#start"><img class="logo" src="images/kina-black.png"/></a>
+            <a href="#start"><img class="logo" src="../images/kina-black.png"/></a>
         </div>
         <div class="mainnav">
-            <a href="#nav-events" class="">HOCHZEIT</a>
-            <a href="#nav-lovestory" class="">LOVESTORY</a>
-            <a href="#info" class="">INFO</a>
+            <!--<a href="#nav-lovestory" class="">LOVESTORY</a>-->
+            <a href="#nav-events" class="">PORTFOLIO</a>
+            <a href="#info" class="">ÜBER UNS</a>
             <a href="#contact" class="">KONTAKT</a>
         </div>
 
@@ -113,6 +113,36 @@
 
 
 
+    
+<!--
+
+    <div id="nav-lovestory"></div>
+
+    <div class="headline">
+        <h2 class="widetext">LOVESTORY</h2>
+        <h4 class="widetext">Die schönsten Momente</h4>
+    </div>
+    <div class="block">
+        <div class="instagram-kinastudio-lovestory"></div>
+        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_lovestory/" target="_blank">Mehr
+            auf Instagram ></a>
+    </div>
+    <script>
+        $('.instagram-kinastudio-lovestory').instagramElement({
+            mode: 'tag',
+            tag: 'kinastudio_wedding',
+            userID: '2066076364',
+            accessToken: '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
+            galleryMode: 'classic',
+            limit: 6,
+            video: true,
+            showVideoControls: false
+        });
+    </script>
+-->
+
+
+
     <div id="nav-wedding"></div>
 
     <div class="headline">
@@ -138,29 +168,6 @@
     </script>
 
 
-    <div id="nav-lovestory"></div>
-
-    <div class="headline">
-        <h2 class="widetext">LOVESTORY</h2>
-        <h4 class="widetext">Die schönsten Momente</h4>
-    </div>
-    <div class="block">
-        <div class="instagram-kinastudio-lovestory"></div>
-        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_lovestory/" target="_blank">Mehr
-            auf Instagram ></a>
-    </div>
-    <script>
-        $('.instagram-kinastudio-lovestory').instagramElement({
-            mode: 'tag',
-            tag: 'kinastudio_lovestory',
-            userID: '2066076364',
-            accessToken: '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
-            galleryMode: 'classic',
-            limit: 6,
-            video: true,
-            showVideoControls: false
-        });
-    </script>
 
 
     <div id="info"></div>
@@ -197,10 +204,10 @@
 
     <div class="block bgblack">
         <a href="https://www.facebook.com/www.kina.studio" target="_blank"><img class="socialbutton"
-                                                                                src="images/facebook-white.png"/></a>
+                                                                                src="../images/facebook-white.png"/></a>
         <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="socialbutton"
-                                                                              src="images/instagram-white.png"/></a>
-        <a href="https://500px.com/kinastudio" target="_blank"><img class="socialbutton" src="images/500px-white.png"/></a>
+                                                                              src="../images/instagram-white.png"/></a>
+        <a href="https://500px.com/kinastudio" target="_blank"><img class="socialbutton" src="../images/500px-white.png"/></a>
     </div>
 
 
@@ -227,13 +234,13 @@
     <div class="topline"></div>
 
     <div class="block">
-        <a class="link" href="imprint.html" target="_blank">Impressum // imprint</a>
+        <a class="link" href="../imprint.html" target="_blank">IMPRESSUM</a>
         <p style="text-align: center;">&copy; 2009-2017 KINA.studio. Stuttgart city.</p>
     </div>
 </div>
 
 
-<p class="cookiesrow">kina.studio verwendet Cookies. <br> <a href="privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="closeCookieWindow">OK</a></p>
+<p class="cookiesrow">kina.studio verwendet Cookies. <br> <a href="../privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="closeCookieWindow">OK</a></p>
 
 <div class=""><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
