--- a/hochzeit/index.html
+++ b/hochzeit/index.html
@@ -39,7 +39,7 @@
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Oswald:600" rel="stylesheet">
 
-    <script type="text/javascript" src="../js/kina-white.js"></script>
+    <script type="text/javascript" src="../js/kina.js"></script>
     <link rel="stylesheet" href="../css/kina-white.css">
 </head>
 
@@ -61,7 +61,7 @@
         </div>
         <div class="mainnav">
             <!--<a href="#nav-lovestory" class="">LOVESTORY</a>-->
-            <a href="#nav-events" class="">PORTFOLIO</a>
+            <a href="#wedding" class="">PORTFOLIO</a>
             <a href="#info" class="">ÜBER UNS</a>
             <a href="#contact" class="">KONTAKT</a>
         </div>
@@ -143,7 +143,7 @@
 
 
 
-    <div id="nav-wedding"></div>
+    <div id="wedding"></div>
 
     <div class="headline">
         <h2 class="widetext">HOCHZEIT</h2>
