--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Oswald:600" rel="stylesheet">
 
-    <script type="text/javascript" src="js/kina-black.js"></script>
+    <script type="text/javascript" src="js/kina.js"></script>
     <link rel="stylesheet" href="css/kina-black.css">
 </head>
 
