--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
     
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600" rel="stylesheet">
     <meta charset="utf-8"/>
-    <link rel="stylesheet" href="css/kina.css">
+    <link rel="stylesheet" href="css/kina-white.css">
 </head>
 
 
