--- a/hochzeit/index.html
+++ b/hochzeit/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- CUSTOM STUFF BEFORE PLUGINS -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>KINA.studio Hochzeitsreportage</title>
+    <title>KINA.studio | Eventfotografie @ Stuttgart City.</title>
     <meta name="description"
           content="Hochzeit"/>
     <meta name="robots" content="INDEX,FOLLOW"/>
@@ -48,7 +48,7 @@
 
 <div id="start" class="wrapper">
 
-    <p class="welcomerow desktop">Willkommen bei kina.studio - Professionelle Fotografie an dem schönsten Tag Ihres Lebens. </p>
+    <p class="welcomerow desktop">Willkommen bei kina.studio - Professionelle Fotografie für den schönsten Tag Ihres Lebens.</p>
 
     <div class="logo-wrapper logo-wrapper-desktop block header desktop">
         <img class="logo" src="../images/kina-black.png"/>
@@ -78,8 +78,8 @@
 
 
     <!-- SLIDER STUFF HERE -->
+    
     <div id="jssor_1" class="slider-wrapper" style="">
-
         <div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
             <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
             <div style="position:absolute;display:block;background:url('images/loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
@@ -98,6 +98,12 @@
                 </a>
             </div>
 
+            <div data-p="225.00" style="display: none;">
+                <a href="#nav-business">
+                    <img data-u="image" src="photos/slides/03.jpg"/>
+                </a>
+            </div>
+
         </div>
 
         <div data-u="navigator" class="jssorb05" style="bottom:16px;right:16px;" data-autocenter="1">
@@ -108,6 +114,7 @@
               data-autocenter="2"></span>
         <span data-u="arrowright" class="jssora22r" style="top:0px;right:8px;width:40px;height:58px;"
               data-autocenter="2"></span>
+
     </div>
 
 
@@ -149,6 +156,7 @@
         <h2 class="widetext">HOCHZEIT</h2>
         <h4 class="widetext">CLASSIC EVENT</h4>
     </div>
+
     <div class="block">
         <div class="instagram-kinastudio-wedding"></div>
         <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_wedding/" target="_blank">Mehr
@@ -179,21 +187,9 @@
 
     <div class="block" style="margin-left:10px;margin-right:10px;">
 
-        <h4>LIFESTYLE. FASHION. BUSINESS.</h4>
+        <h4>HOCHZEIT. LOVESTORY. LIFESTYLE.</h4>
 
-        <p class="info">Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
-            Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen.
-            Erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte oder schöne Portraits für Ihre Mitarbeiter.
-            Darüber hinaus können Sie mit uns in die Welt der Produkt- und
-            Werbevideos einsteigen. </p>
-
-        <h4>E-COMMERCE. WEB. PRINT.</h4>
-
-        <p class="info">Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
-            Webseite oder Online-Shop durch die schnellen Ladezeiten und volle Farben die besten Erlebnisse machen
-            können.
-            Schicken Sie uns einfach eine kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Fotografie und
-            Weboptimierung.</p>
+        <p class="info">Willkommen bei kina.studio - Professionelle Fotografie für den schönsten Tag Ihres Lebens.</p>
 
     </div>
 
