--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Oswald:600" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet"><!--  Hochzeit  -->
+
     <script type="text/javascript" src="js/kina.js"></script>
     <link rel="stylesheet" href="css/kina-black.css">
 </head>
@@ -60,7 +62,7 @@
             <a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kina-white.png"/></a>
             <a href="#nav-fashion" class="">FASHION & BEAUTY</a>
             <a href="#nav-business" class="">BUSINESS</a>
-            <a href="#nav-events" class="">HOCHZEIT</a>
+            <a href="hochzeit" target="_blank" class="weddinglink">Hochzeit</a>
             <a href="#nav-lifestyle" class="">LIFESTYLE</a>
             <a href="#info" class="">INFO</a>
             <a href="#contact" class="">KONTAKT</a>
@@ -178,35 +180,11 @@
     </script>
 
 
-    <div id="nav-events"></div>
-
-    <div class="headline">
-        <h2 class="widetext">HOCHZEIT</h2>
-        <h4 class="widetext">CLASSIC EVENT</h4>
-    </div>
-    <div class="block">
-        <div class="instagram-kinastudio-wedding"></div>
-        <a class="blackbutton" href="https://www.instagram.com/explore/tags/kinastudio_wedding/" target="_blank">Mehr
-            auf Instagram ></a>
-    </div>
-    <script>
-        $('.instagram-kinastudio-wedding').instagramElement({
-            mode: 'tag',
-            tag: 'kinastudio_wedding',
-            userID: '2066076364',
-            accessToken: '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
-            galleryMode: 'classic',
-            limit: 12,
-            video: true,
-            showVideoControls: false
-        });
-    </script>
-
-
     <div id="nav-lifestyle"></div>
 
     <div class="headline">
         <h2 class="widetext">LIFESTYLE</h2>
+        <h4 class="widetext">MUSIC. STUDIO. KUNST.</h4>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-lifestyle"></div>
