--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
 </div>
 
 
-<p class="cookiesrow">kina.studio verwendet Cookies.<br>
-<a href="privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;<a class="closeCookieWindow informedAboutCookies">Einverstanden</a></p>
+<p class="cookiesrow">kina.studio verwendet Cookies, um Ihnen ein angenehmeres Surfen zu ermöglichen.<br>
+<a href="privacy.html" class="whitebutton informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;<a class="whitebutton closeCookieWindow informedAboutCookies">Einverstanden</a></p>
 
 <div class=""><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
