--- a/hochzeit/index.html
+++ b/hochzeit/index.html
@@ -62,8 +62,10 @@
         <div class="mainnav">
             <!--<a href="#nav-lovestory" class="">LOVESTORY</a>-->
             <a href="#wedding" class="">PORTFOLIO</a>
+            <a href=".." class="studiolink">BEAUTY. FASHION. BUSINESS.</a>
             <a href="#info" class="">ÜBER UNS</a>
             <a href="#contact" class="">KONTAKT</a>
+            
         </div>
 
 <!--
@@ -236,7 +238,7 @@
 </div>
 
 
-<p class="cookiesrow">kina.studio verwendet Cookies. <br> <a href="../privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="closeCookieWindow">OK</a></p>
+<p class="cookiesrow">kina.studio verwendet Cookies, um Ihnen ein angenehmeres Surfen zu ermöglichen. / We use cookies on our website to give you the best service possible.<br> <a href="../privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="closeCookieWindow">OK</a></p>
 
 <div class=""><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
