--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kina-white.png"/></a>
             <a href="#nav-fashion" class="">FASHION & BEAUTY</a>
             <a href="#nav-business" class="">BUSINESS</a>
+            <a href="hochzeit" class="weddinglink">Hochzeit</a>
             <a href="#nav-lifestyle" class="">LIFESTYLE</a>
-            <a href="hochzeit" target="_blank" class="weddinglink">Hochzeit</a>
             <a href="#info" class="">INFO</a>
             <a href="#contact" class="">KONTAKT</a>
         </div>
@@ -274,7 +274,7 @@
 </div>
 
 
-<p class="cookiesrow">kina.studio verwendet Cookies, um Ihnen ein angenehmeres Surfen zu ermöglichen.<br><br>
+<p class="cookiesrow">kina.studio verwendet Cookies, um Ihnen ein angenehmeres Surfen zu ermöglichen. / We use cookies on our website to give you the best service possible.<br><br>
 <a href="privacy.html" class="whitebutton informedAboutCookies" target="_blank">Mehr erfahren</a> <a class="whitebutton closeCookieWindow informedAboutCookies">Einverstanden</a></p>
 
 <div class=""><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
