--- a/hochzeit/index.html
+++ b/hochzeit/index.html
@@ -39,6 +39,8 @@
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Oswald:600" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet"><!--  Hochzeit  -->
+
     <script type="text/javascript" src="../js/kina.js"></script>
     <link rel="stylesheet" href="../css/kina-white.css">
 </head>
@@ -60,9 +62,10 @@
             <a href="#start"><img class="logo" src="../images/kina-black.png"/></a>
         </div>
         <div class="mainnav">
-            <!--<a href="#nav-lovestory" class="">LOVESTORY</a>-->
-            <a href="#wedding" class="">PORTFOLIO</a>
-            <a href=".." class="studiolink">BEAUTY. FASHION. BUSINESS.</a>
+            
+            <!--<a href="#wedding" class="">LOVESTORY</a>-->
+            <a href="#wedding" class="weddinglink">Hochzeit</a>
+            <a href=".." class="studiolink">BEAUTY & FASHION</a>
             <a href="#info" class="">ÜBER UNS</a>
             <a href="#contact" class="">KONTAKT</a>
             
