--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
     <link href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet"><!--  Hochzeit  -->
 
     <script type="text/javascript" src="js/kina.js"></script>
-    <link rel="stylesheet" href="css/kina-black.css">
+    <link rel="stylesheet" href="css/kinastudio.css">
 </head>
 
 
