--- a/test2.html
+++ b/test2.html
@@ -53,13 +53,17 @@
 
 <div id="start" class="wrapper">
 
+<p class="logotext desktop">BEAUTY. FASHION. LIFESTYLE.</p>
+
+<a href="#start"><img class="logo desktop" src="images/kinastudio2.png"/></a>
+
     <div class="mainnav-wrapper">
-        <div class="logo-wrapper logo-wrapper-mobile block bgblack transp header mobile">
+        <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
             <a class="mobilemenuicon" href="">= MENU</a>
             <a href="#start"><img class="logo" src="images/kinastudio2.png"/></a>
         </div>
         <div class="mainnav">
-            <a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kinastudio2.png"/></a>
+            <!--<a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kinastudio2.png"/></a>-->
             <a href="#nav-fashion" class="">FASHION & BEAUTY</a>
             <a href="#nav-business" class="">BUSINESS</a>
             <a href="hochzeit" class="weddinglink">Hochzeit</a>
