--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <link href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet"><!--  Hochzeit  -->
 
     <script type="text/javascript" src="js/kina.js"></script>
-    <link rel="stylesheet" href="css/kina-black.css">
+    <link rel="stylesheet" href="css/kinastudio.css">
 </head>
 
 
@@ -53,13 +53,17 @@
 
 <div id="start" class="wrapper">
 
+<p class="logotext desktop">BEAUTY & FASHION PHOTOGRAPHY</p>
+
+<a href="#start"><img class="logo desktop" src="images/kinastudio.png"/></a>
+
     <div class="mainnav-wrapper">
-        <div class="logo-wrapper logo-wrapper-mobile block bgblack transp header mobile">
+        <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
             <a class="mobilemenuicon" href="">= MENU</a>
-            <a href="#start"><img class="logo" src="images/kina-white.png"/></a>
+            <a href="#start"><img class="logo" src="images/kinastudio.png"/></a>
         </div>
         <div class="mainnav">
-            <a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kina-white.png"/></a>
+            <!--<a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kinastudio.png"/></a>-->
             <a href="#nav-fashion" class="">FASHION & BEAUTY</a>
             <a href="#nav-business" class="">BUSINESS</a>
             <a href="hochzeit" class="weddinglink">Hochzeit</a>
