--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <div class="mainnav-wrapper">
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
             <a class="mobilemenuicon" href="">= MENU</a>
+            <p class="logotext mobile">BEAUTY & FASHION PHOTOGRAPHY</p>
             <a href="#start"><img class="logo" src="images/kinastudio.png"/></a>
         </div>
         <div class="mainnav">
