--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
             <a class="mobilemenuicon" href=""><img src="images/menuicon.png"/></a>
             <a href="#start"><img class="logo" src="images/kinastudio.png"/></a>
+            <a class="mobilecontacticon" href="#contact"><img src="images/contacticon.png"/></a>
         </div>
         <div class="mainnav">
             <!--<a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kinastudio.png"/></a>-->
