--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
 <a href="#start"><img class="logo desktop" src="images/kinastudio.png"/></a>
 
     <div class="mainnav-wrapper">
+        <p class="logotext mobile">PHOTOGRAPHY</p>
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
             <a class="mobilemenuicon" href=""><img src="images/menuicon.png"/></a>
             <a href="#start"><img class="logo" src="images/kinastudio.png"/></a>
             <a class="mobilecontacticon" href="#contact"><img src="images/contacticon.png"/></a>
+
         </div>
         <div class="mainnav">
             <!--<a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kinastudio.png"/></a>-->
