--- a/index.html
+++ b/index.html
@@ -53,17 +53,16 @@
 
 <div id="start" class="wrapper">
 
-<p class="logotext desktop">BEAUTY & FASHION PHOTOGRAPHY</p>
+<p class="logotext desktop">FASHION & LIFESTYLE PHOTOGRAPHY</p>
 
 <a href="#start"><img class="logo desktop" src="images/kinastudio.png"/></a>
 
     <div class="mainnav-wrapper">
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
-            <p class="logotext mobile">PHOTOGRAPHY</p>
+            <p class="logotext mobile">FASHION & LIFESTYLE</p>
             <a class="mobilemenuicon" href=""><img src="images/menuicon.png"/></a>
             <a href="#start"><img class="logo" src="images/kinastudio.png"/></a>
             <a class="mobilecontacticon" href="#contact"><img src="images/contacticon.png"/></a>
-
         </div>
         <div class="mainnav">
             <!--<a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kinastudio.png"/></a>-->
