--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     <div class="mainnav-wrapper">
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
             <p class="logotext mobile">FASHION & LIFESTYLE</p>
-            <a class="mobilemenuicon" href=""><img src="images/menuicon.png"/></a>
-            <a href="#start"><img class="logo" src="images/kinastudio.png"/></a>
-            <a class="mobilecontacticon" href="#contact"><img src="images/contacticon.png"/></a>
+            <a class="menuicon" href=""><img src="images/menuicon.png"/></a>
+            <a class="logoicon" href="#start"><img class="logo" src="images/kinastudio.png"/></a>
+            <a class="contacticon" href="#contact"><img src="images/contacticon.png"/></a>
         </div>
         <div class="mainnav">
             <!--<a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kinastudio.png"/></a>-->
