--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
 <body class="body">
 
-    <p class="cookiesrow">kina.studio verwendet Cookies, um Ihnen ein angenehmeres Surfen zu ermöglichen. / We use cookies on our website to give you the best service possible.<br><br>
-    <a href="privacy.html" class="whitebutton informedAboutCookies" target="_blank">Mehr erfahren</a> <a class="whitebutton closeCookieWindow informedAboutCookies">Einverstanden</a></p>
+    <p class="cookiesrow"><span>kina.studio verwendet Cookies, um Ihnen ein angenehmeres Surfen zu ermöglichen.</span>
+    <a href="privacy.html" class="cookielink informedAboutCookies" target="_blank">Mehr erfahren</a><a class="cookiebutton closeCookieWindow informedAboutCookies">OK</a></p>
     
     <p class="welcomerow desktop">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
 
