--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
 <body class="body">
 
-    <p class="cookiesrow"><span>kina.studio verwendet Cookies, um Ihnen ein angenehmeres Surfen zu ermöglichen.</span>
-    <a href="privacy.html" class="cookielink informedAboutCookies" target="_blank">Mehr erfahren</a><a class="cookiebutton closeCookieWindow informedAboutCookies">OK</a></p>
+    <p class="cookiesrow">kina.studio verwendet Cookies, um Ihnen ein angenehmeres Surfen zu ermöglichen.
+    <a href="privacy.html" class="cookielink informedAboutCookies" target="_blank">Weitere Informationen</a><a class="cookiebutton closeCookieWindow informedAboutCookies">OK</a></p>
     
-    <p class="welcomerow desktop">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
+    <p class="welcomerow">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
 
 <div id="start" class="wrapper">
 
@@ -60,7 +60,7 @@
 
 <a href="#start"><img class="logo desktop" src="images/kinastudio.png"/></a>
 
-    <div class="mainnav-wrapper">
+    <div class="mainnav-wrapper transp">
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
             <p class="logotext mobile">FASHION & LIFESTYLE</p>
             <a class="menuicon" href=""><img src="images/menuicon.png"/></a>
