--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
 <body class="body">
 
-    <p class="cookiesrow">kina.studio verwendet Cookies, um Ihnen ein angenehmeres Surfen zu ermöglichen.
-    <a href="privacy.html" class="cookielink informedAboutCookies" target="_blank">Weitere Informationen</a><a class="cookiebutton closeCookieWindow informedAboutCookies">OK</a></p>
+    <p id="cookiesrow" class="cookiesrow">kina.studio verwendet Cookies, um Ihnen ein angenehmeres Surfen zu ermöglichen.
+    <a href="privacy.html" class="cookielink informedAboutCookies" target="_blank">Weitere Informationen</a><a class="cookiebutton informedAboutCookies">OK</a></p>
     
     <p class="welcomerow">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
 
