--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Oswald:600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
+
+
 
     <link href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet"><!--  Hochzeit  -->
 
