--- a/hochzeit/index.html
+++ b/hochzeit/index.html
@@ -58,7 +58,7 @@
 
     <div class="mainnav-wrapper">
         <div class="logo-wrapper logo-wrapper-mobile block bgwhite transp header mobile">
-            <a class="mobilemenuicon" href="">= MENU</a>
+            <a class="menuicon" href="">= MENU</a>
             <a href="#start"><img class="logo" src="../images/kina-black.png"/></a>
         </div>
         <div class="mainnav">
@@ -241,7 +241,7 @@
 </div>
 
 
-<p class="cookiesrow">kina.studio verwendet Cookies, um Ihnen ein angenehmeres Surfen zu ermöglichen. / We use cookies on our website to give you the best service possible.<br> <a href="../privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="closeCookieWindow">OK</a></p>
+<p id="cookiesrow" class="cookiesrow">kina.studio verwendet Cookies, um Ihnen ein angenehmeres Surfen zu ermöglichen.<br> <a href="../imprint.html" class="cookielink" target="_blank">Impressum</a>&nbsp;&nbsp;<a href="../privacy.html" class="cookielink informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;<a class="cookiebutton informedAboutCookies">OK</a></p>
 
 <div class=""><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
