--- a/hochzeit/index.html
+++ b/hochzeit/index.html
@@ -192,7 +192,8 @@
 
     <div class="block" style="margin-left:10px;margin-right:10px;">
 
-        <h4>HOCHZEIT. LOVESTORY. LIFESTYLE.</h4>
+        <h2>HOCHZEIT & LOVESTORY</h2>
+        <h3>BEST DAY IN YOUR LIFE</h3>
 
         <p class="info">Willkommen bei kina.studio - Professionelle Fotografie für den schönsten Tag Ihres Lebens.</p>
 
