--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 </head>
 
 
-<body class="body">
+<body id="start" class="body">
 
     <p id="cookiesrow" class="cookiesrow">kina.studio verwendet Cookies, um Ihnen ein angenehmeres Surfen zu ermöglichen.
     <a href="privacy.html" class="cookielink informedAboutCookies" target="_blank">Weitere Informationen</a><a class="cookiebutton informedAboutCookies">OK</a></p>
     
     <p class="welcomerow">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
 
-<div id="start" class="wrapper">
+<div class="wrapper">
 
 <p class="logotext desktop">FASHION & LIFESTYLE PHOTOGRAPHY</p>
 
