--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div id="nav-fashion"></div>
 
     <div class="headline">
-        <h2 class="widetext">FASHION & BEAUTY</h2>
+        <h2 class="">FASHION & BEAUTY</h2>
         <h4 class="widetext">GET INSPIRED</h4>
     </div>
 
@@ -167,7 +167,7 @@
     <div id="nav-business"></div>
 
     <div class="headline">
-        <h2 class="widetext">BUSINESS LOOKS</h2>
+        <h2 class="">BUSINESS LOOKS</h2>
         <h4 class="widetext">LIFESTYLE IM GESCHÄFT</h4>
     </div>
     <div class="block">
@@ -192,8 +192,8 @@
     <div id="nav-lifestyle"></div>
 
     <div class="headline">
-        <h2 class="widetext">LIFESTYLE</h2>
-        <h4 class="widetext">MUSIC. STUDIO. KUNST.</h4>
+        <h2 class="">LIFESTYLE</h2>
+        <h4 class="widetext">More inspiration</h4>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-lifestyle"></div>
