--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     <div class="headline">
         <h2 class="">BUSINESS LOOKS</h2>
-        <h4 class="widetext">LIFESTYLE IM GESCHÄFT</h4>
+        <h4 class="">LIFESTYLE IM GESCHÄFT</h4>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-business"></div>
@@ -217,7 +217,7 @@
     <div id="info"></div>
 
     <div class="headline">
-        <h2 class="widetext">PHOTOGRAPHY</h2>
+        <h2 class="">PHOTOGRAPHY</h2>
         <h4 class="widetext">by kina studio</h4>
     </div>
 
