--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Oswald:600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+    
     <link href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet"><!--  Hochzeit  -->
 
     <script type="text/javascript" src="js/kina.js"></script>
