--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="mainnav">
             <!--<a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kinastudio.png"/></a>-->
             <a href="#nav-fashion" class="">FASHION & BEAUTY</a>
-            <a href="#nav-business" class="">BUSINESS</a>
+            <a href="#nav-business" class="">BUSINESS LOOKS</a>
             <a href="hochzeit" class="weddinglink">Hochzeit</a>
             <a href="#nav-lifestyle" class="">LIFESTYLE</a>
             <a href="#info" class="">INFO</a>
@@ -170,7 +170,7 @@
 
     <div class="headline">
         <h2 class="">BUSINESS LOOKS</h2>
-        <h4 class="">LIFESTYLE IM GESCHÄFT</h4>
+        <h4 class="widetext">LIFESTYLE IM GESCHÄFT</h4>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-business"></div>
@@ -195,7 +195,7 @@
 
     <div class="headline">
         <h2 class="">LIFESTYLE</h2>
-        <h4 class="widetext">More inspiration</h4>
+        <h4 class="widetext">MORE INSPIRATION</h4>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-lifestyle"></div>
