--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
     <div id="contact"></div>
     <div class="block headline">
-        <h2 class="widetext">KONTAKT</h2>
+        <h2 class="">KONTAKT</h2>
     </div>
 
     <div class="block">
