--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <h4 class="widetext">by kina studio</h4>
     </div>
 
-    <div class="block" style="margin-left:10px;margin-right:10px;">
+    <div class="block whitebox">
 
         <h4>LIFESTYLE. FASHION. BUSINESS.</h4>
 
@@ -242,8 +242,6 @@
             Weboptimierung.</p>
 
     </div>
-
-
 
 
     <div id="contact"></div>
