--- a/index.html
+++ b/index.html
@@ -60,13 +60,23 @@
 
 <p class="logotext desktop">FASHION & LIFESTYLE PHOTOGRAPHY</p>
 
-<a href="#start"><img class="logo desktop" src="images/kinastudio.png"/></a>
+<a href="#start">
+    <div class="logoline desktop">
+        <h2>KINA'STUDIO</h2>
+        <h4>STUTTGART</h4>
+    </div>
+    <!--<img class="logo desktop" src="images/kinastudio.png"/>-->
+</a>
 
     <div class="mainnav-wrapper transp">
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
             <p class="logotext mobile">FASHION & LIFESTYLE</p>
             <a class="menuicon" href=""><img src="images/menuicon.png"/></a>
-            <a class="logoicon" href="#start"><img class="logo" src="images/kinastudio.png"/></a>
+            <div class="logoline logoicon">
+                <h2>KINA'STUDIO</h2>
+                <h4>STUTTGART</h4>
+            </div>
+            <!--<a class="logoicon" href="#start"><img class="logo" src="images/kinastudio.png"/></a>-->
             <a class="contacticon" href="#contact"><img src="images/contacticon.png"/></a>
         </div>
         <div class="mainnav">
